<resources>
    <string name="app_name">Movie Now</string>
    <string name="movies">MOVIES</string>
    <string name="tv_series">TV SERIES</string>
    <string name="bg_header_gradient">bg_header_gradient</string>
    <string name="poster">Poster</string>
    <string name="detail_poster_header">Detail Poster Header</string>
    <string name="button_back_from_detail">Button Back From Detail</string>
    <string name="main_background">Main Background</string>
    <string name="overview">Overview</string>
    <string name="text_desc">Wonder Woman comes into conflict with the Soviet Union during the Cold War in the 1980s and finds a formidable foe by the name of the Cheetah.</string>
    <string name="userscore">User Score</string>
    <string name="from_themoviedb_org">themoviedb.org</string>
    <string name="text_popularity">Popularity</string>
    <string name="runtime">%d Minutes</string>
    <string name="image_cast">Image Cast</string>
    <string name="something_happen">Unexpected Error</string>
    <string name="movies_bottom">Movies</string>
    <string name="tv_series_bottom">Tv Series</string>
    <string name="favorite_bottom">Favorites</string>
    <string name="genre">%1$s</string>
    <string name="add_to_favorite">Add %s To Favorite</string>
    <string name="remove_from_favorite">Remove %s From Favorite</string>
    <string name="image_rating">Image Rating</string>
    <string name="image_runtime">Image Runtime</string>
    <string name="title_movies">Movies</string>
    <string name="title_tv_series">Tv Series</string>
    <string name="title_favorites">Favorites</string>
    <string name="items_not_found">items Not Found</string>
    <string name="no_favorite_movies">No Favorite Movies.</string>
    <string name="no_favorite_tv_series">No Favorite Tv Series.</string>
    <string name="share_button">Share Button</string>
    <string name="favorite_button">FavoriteButton</string>
    <string name="floating_menu">Floating Menu</string>
    <string name="share_title">Title : %s</string>
    <string name="share_year">Year : %s</string>
    <string name="share_overview">Overview : %s</string>
    <string name="share_link">Link : https://www.themoviedb.org/movie/%s</string>
    <string name="title">Title</string>
    <string name="rating">Rating</string>
    <string name="newest">Newest</string>
    <string name="oldest">Oldest</string>
    <string name="sort_image">Sort Image</string>
    <string name="background_rating">Background Rating</string>
    <string name="no_rating">NR</string>
</resources>