<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.favorite.movies.MoviesFavoriteFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            app:elevation="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/backgroundColor">

                <ImageView
                    android:id="@+id/iv_sort"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:contentDescription="@string/sort_image"
                    android:src="@drawable/ic_sort"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <HorizontalScrollView
                    android:id="@+id/horizontal_scroll"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:scrollbars="none"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/iv_sort"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/main_sort_chip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        app:checkedChip="@+id/newest_chip"
                        app:selectionRequired="true"
                        app:singleLine="true"
                        app:singleSelection="true">

                        <com.google.android.material.chip.Chip
                            android:id="@+id/title_chip"
                            style="@style/CustomChipStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/title" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/rating_chip"
                            style="@style/CustomChipStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rating" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/newest_chip"
                            style="@style/CustomChipStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/newest" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/oldest_chip"
                            style="@style/CustomChipStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/oldest" />


                    </com.google.android.material.chip.ChipGroup>

                </HorizontalScrollView>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/backgroundColor"
            android:scrollbars="none">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.todkars.shimmer.ShimmerRecyclerView
                    android:id="@+id/rv_movies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:shimmer_recycler_layout="@layout/placeholder_shimmer_layout_recyclerview" />

                <ImageView
                    android:id="@+id/iv_item_not_found"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="200dp"
                    android:layout_marginBottom="200dp"
                    android:alpha="0.5"
                    android:contentDescription="@string/items_not_found"
                    android:src="@drawable/ic_menu_book"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/black" />

                <TextView
                    android:id="@+id/tv_item_not_found"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:alpha="0.5"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/no_favorite_movies"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@id/iv_item_not_found"
                    app:layout_constraintStart_toStartOf="@id/iv_item_not_found"
                    app:layout_constraintTop_toBottomOf="@id/iv_item_not_found" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>